添加了Activity Land，FragmentLanding，Fragment Post，FragmentPresonal以及他们对应的布局文件。完成了注册的数据存储。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DiscussActivity"/>
+        <activity android:name=".ActivityLand"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
