添加了个人中的信息和设置的布局文件，完成了登陆注册以及个人界面的数据交互。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".DiscussActivity"/>
-        <activity android:name=".ActivityLand"/>
+        <activity android:name=".ActivityLand"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
